--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>stopnshop.net</title>
-</head>	
+	
 <link rel="stylesheet" href="JOJOS1.css">
 <script src="https://kit.fontawesome.com/bacd6c717d.js" crossorigin="anonymous"></script>
+</head>	
 <!-- Main Container -->
-<div> 
+ <div>
 	<header>
   <!-- Navigation -->	
    <a> 
@@ -16,7 +17,7 @@
    <nav>			
    <ul>  
               <a href="#about" class="navigation" target="about"> ABOUT</a>
-			  <a href="#JOJOS.html" class="navigation" target="JOJOS.html"> HOME</a> 
+			  <a href="" class="navigation" target=""> HOME</a> 
 			  <a href="#footer" class="navigation" target="footer"> CONTACT </a>	          
 	          
    </ul>
@@ -24,7 +25,8 @@
    </div> 
    </a>
    </header>
-</div>
+	</div>
+
   
 	
 <body>
@@ -62,7 +64,7 @@
 <body>
 <div> 
   <div class="flex">
-	 <div class="vape" href="images/vape.png" target="_self"> <img class="vapeimg" src="images/vape.png" alt="image" width="675" height="800" target="_self"> 
+	 <div class="vape" > <img class="vapeimg" src="images/vape.png" alt="image" width="675" height="800" target="_self"> 
 		
 	 <p class="text_column_vape" align="justify">	  
      <br>
@@ -92,7 +94,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5863.206552134947!2d-
    </div>
 
 <div class="section-two"> 
-	 <form method="post" action="jojos@stopnshop.net">
+	 <form method="post" action="../../stopnshop/jojos@stopnshop.net">
   <div>  
      <h4>Feedback</h4>
      <label for="name">Name: <span class="required">*</span> </label>
